chore(npm): :heavy_plus_sign: npm i express

--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["auth"],
+  "keywords": [
+    "auth"
+  ],
   "author": "YourAKShaw",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
