--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "http-errors": "^2.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
