--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "http-errors": "^2.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "eslint": "^9.6.0",
+    "eslint-config-prettier": "^9.1.0",
+    "nodemon": "^3.1.4",
+    "prettier": "^3.3.2"
   }
 }
