--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "http-errors": "^2.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.6.0",
     "eslint": "^9.6.0",
     "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.8.0",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.2"
   }
