--- a/.gitignore
+++ b/.gitignore
@@ -121,6 +121,8 @@ dist
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+
+# Stores VSCode settings
 .vscode
 
 # yarn v2
